# bazel-things

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel  buildifier  go.mod  notes.txt
cmd/hello/: BUILD.bazel  main.go
go/: go.mod
go/cmd/hello/: BUILD.bazel  main.go
go/greet/: BUILD.bazel
go/pkgs/greet/: BUILD.bazel
greet/: BUILD.bazel
java/: README.md
