load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "\"github.com/clee421/bazel\"/cmd/hello",
    visibility = ["//visibility:private"],
)
